
   - MapperExtension.before_update() and after_update() are now called
     symmetrically; previously, an instance that had no modified column
     attributes (but had a relation() modification) could be called with 
     before_update() but not after_update() [ticket:907]
     
   - columns which are missing from a Query's select statement
     now get automatically deferred during load.
   
   - fixed Query bug when filter_by() compares a relation against None
     [ticket:899]
     
   - improved support for pickling of mapped entities.  Per-instance
     lazy/deferred/expired callables are now serializable so that
     they serialize and deserialize with _state. 
       
   - new synonym() behavior: an attribute will be placed on the mapped
     class, if one does not exist already, in all cases. if a property
     already exists on the class, the synonym will decorate the property
     with the appropriate comparison operators so that it can be used in in
     column expressions just like any other mapped attribute (i.e. usable in
     filter(), etc.) the "proxy=True" flag is deprecated and no longer means
     anything. Additionally, the flag "map_column=True" will automatically
     generate a ColumnProperty corresponding to the name of the synonym,
     i.e.: 'somename':synonym('_somename', map_column=True) will map the
     column named 'somename' to the attribute '_somename'. See the example
     in the mapper docs. [ticket:801]

   - Query.select_from() now replaces all existing FROM criterion with
     the given argument; the previous behavior of constructing a list
     of FROM clauses was generally not useful as is required 
     filter() calls to create join criterion, and new tables introduced
     within filter() already add themselves to the FROM clause.  The
     new behavior allows not just joins from the main table, but select 
     statements as well.  Filter criterion, order bys, eager load